# AlgoReproduce

./: CMakeLists.txt  README.md
algolib/: CMakeLists.txt
algolib/inc/: algo.hpp
algolib/src/: algo.cpp  main.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main_test.cpp
